tests/integration/traits/errors/impl-type/main.cx
data D {}

trait T {
  m(self): Number
}

impl T D {
  m = fun(d) {
    "boo"
  }
}
